# staking-ui-service

./: .gitignore  .typos.toml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  demo.just  flake.nix  justfile
.direnv/: flake-profile-1-link
.github/workflows/: build.yml  demo.yml  doc.yml  lint.yml  test.yml
api/: api.toml
demo/: .env  docker-compose.yaml
demo/geth-config/: genesis.json
docker/: client-swarm.Dockerfile  staking-ui-service.Dockerfile
migrations/sqlite/: 01_init_schema.sql  02_metadata.sql  02_metadata_uri.sql  03_apr.sql
scripts/: smoketest-demo.sh
src/: app.rs  error.rs  input.rs  lib.rs  main.rs  metrics.rs  persistence.rs  types.rs
src/input/: espresso.rs  l1.rs
src/input/espresso/: client.rs  null_client.rs  testing.rs
src/input/l1/: metadata.rs  options.rs  provider.rs  rpc_catchup.rs  rpc_stream.rs  switching_transport.rs  testing.rs
src/persistence/: sql.rs
src/types/: common.rs  global.rs  wallet.rs
