[package]
name = "staking-ui-service"
version = "0.1.0"
edition = "2024"
license = "mit"

[dependencies]
alloy = { version = "1.0", features = [
    "provider-ws",
    "json-rpc",
    "node-bindings",
] }
async-lock = "3.0"
clap = { version = "4.4", features = ["derive", "env"] }
cld = "0.5"
committable = { git = "https://github.com/EspressoSystems/commit.git", features = [
    "ark-serialize",
] }
derive_more = "2.0"
espresso-types = { git = "https://github.com/EspressoSystems/espresso-network.git" }
futures = "0.3"
hotshot-contract-adapter = { git = "https://github.com/EspressoSystems/espresso-network.git" }
im = { version = "15", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
surf-disco = "0.9"
tagged-base64 = "0.4"
tide-disco = "0.9"
tokio = "1"
toml = "0.8"
tower-service = "0.3"
tracing = "0.1"
vbs = "0.1"

[dev-dependencies]
espresso-contract-deployer = { git = "https://github.com/EspressoSystems/espresso-network.git" }
hotshot-state-prover = { git = "https://github.com/EspressoSystems/espresso-network.git" }
hotshot-types = { git = "https://github.com/EspressoSystems/espresso-network.git" }
portpicker = "0.1"
rand = "0.8"
staking-cli = { git = "https://github.com/EspressoSystems/espresso-network.git" }
test-log = { version = "0.2", features = [
    "color",
    "trace",
], default-features = false }
