[package]
name = "staking-ui-service"
version = "0.1.0"
edition = "2024"
license = "mit"
default-run = "staking-ui-service"

[[bin]]
name = "client-swarm"
test = false
required-features = ["rand"]

[features]
default = []
testing = [
    "espresso-contract-deployer",
    "espresso-types/testing",
    "hotshot-state-prover",
    "jf-signature",
    "pretty_assertions",
    "rand",
    "sequencer",
    "staking-cli",
]

[dependencies]
alloy = { version = "1.0", features = [
    "provider-ws",
    "json-rpc",
    "node-bindings",
] }
anyhow = "1"
async-lock = "3.0"
bigdecimal = "0.4.8"
bitvec = "1"
clap = { version = "4.4", features = ["derive", "env"] }
cld = "0.5"
committable = { git = "https://github.com/EspressoSystems/commit.git", features = [
    "ark-serialize",
] }
derivative = "2"
derive_more = "2.0"
espresso-types = { git = "https://github.com/EspressoSystems/espresso-network.git" }
futures = "0.3"
hotshot-contract-adapter = { git = "https://github.com/EspressoSystems/espresso-network.git" }
hotshot-query-service = { git = "https://github.com/EspressoSystems/espresso-network.git" }
hotshot-types = { git = "https://github.com/EspressoSystems/espresso-network.git" }
im = { version = "15", features = ["serde"] }
log-panics = { version = "2.0", features = ["with-backtrace"] }
parking_lot = "0.12"
prometheus = { version = "0.14", default-features = false }
prometheus-parse = "0.2"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
surf-disco = "0.9"
tagged-base64 = "0.4"
tide-disco = "0.9"
tokio = "1"
toml = "0.8"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
vbs = "0.1"

# Testing dependencies
async-trait = "0.1.89"
espresso-contract-deployer = { git = "https://github.com/EspressoSystems/espresso-network.git", optional = true }
hotshot-state-prover = { git = "https://github.com/EspressoSystems/espresso-network.git", optional = true }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.4.0", features = [
    "std",
], optional = true }
pretty_assertions = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
sequencer = { git = "https://github.com/EspressoSystems/espresso-network.git", features = [
    "embedded-db",
    "testing",
], optional = true }
staking-cli = { git = "https://github.com/EspressoSystems/espresso-network.git", optional = true }

[build-dependencies]
anyhow = "1"
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[dev-dependencies]
# Enable our own `testing` feature when building tests.
staking-ui-service = { path = ".", features = ["testing"] }

portpicker = "0.1"
tempfile = "3"
test-log = { version = "0.2", features = [
    "color",
    "trace",
], default-features = false }
warp = "0.3"
